# mmbend

./: Cargo.toml  README.md
data/: simple.sql
examples/: cmp_hits.rs  cmp_random.rs  cmp_sqls.rs  new_agg_hits.rs  new_agg_random.rs  perf_sqls.rs  test.rs
src/: cmp.rs  generator.rs  lib.rs  main.rs  perf.rs  result.rs  utils.rs
