[package]
name = "mmbend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
databend-driver = "0.14.0"
pretty_env_logger = "0.4"
similar = "2.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
console = "0.15.0"
rand = "0.8.4"

